# intro_python

./: Pipfile  README.md  app.py  aprendizado_maquina.py  ola_web.py  pyproject.toml  relogio.py
