[tool.poetry]
name = "intro-python"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_python"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
